--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,10 @@ span.label-mhover{
     position: relative;
     padding-bottom: 25px;
 }
+
+.container-fluid{
+    display: flex;
+}
 .title-flat-form{
    background-color: #E34724;
    height: 50px;
