--- a/css/libros.css
+++ b/css/libros.css
@@ -19,9 +19,18 @@ body {
 }
 
 .signup-container {
-    display: grid;
-    grid-template-areas: "left right";
-    max-width: 900px;
+  display: grid;
+  grid-template-areas: "left right";
+  max-width: 800px;
+
+  position: relative;
+  top: 100%;
+  left: 50%;
+
+  transform: translate(-50%, -4%);
+  
+
+
   }
 
 .left-container {
