--- a/css/login.css
+++ b/css/login.css
@@ -1,272 +1,173 @@
-* {
-    font-family: -apple-system, BlinkMacSystemFont, "San Francisco", Helvetica, Arial, sans-serif;
-    font-weight: 300;
+body {
     margin: 0;
+    color: #6a6f8c;
+    background: #c8c8c8;
+    font: 600 16px/18px "Open Sans", sans-serif;
   }
-  
-  html,
-  body {
-    height: 100vh;
-    width: 100vw;
-    margin: 0 0;
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    background: #f3f2f2;
-  }
-  
-  h4 {
-    font-size: 24px;
-    font-weight: 600;
-    color: #000;
-    opacity: 0.85;
-  }
-  
-  label {
-    font-size: 12.5px;
-    color: #000;
-    opacity: 0.8;
-    font-weight: 400;
-  }
-  
-  form {
-    padding: 40px 30px;
-    background: #fefefe;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding-bottom: 20px;
-    width: 300px;
-  }
-  form h4 {
-    margin-bottom: 20px;
-    color: rgba(0, 0, 0, 0.5);
-  }
-  form h4 span {
-    color: black;
-    font-weight: 700;
-  }
-  form p {
-    line-height: 155%;
-    margin-bottom: 5px;
-    font-size: 14px;
-    color: #000;
-    opacity: 0.65;
-    font-weight: 400;
-    max-width: 200px;
-    margin-bottom: 40px;
-  }
-  
-  a.discrete {
-    color: rgba(0, 0, 0, 0.4);
-    font-size: 14px;
-    border-bottom: solid 1px rgba(0, 0, 0, 0);
-    padding-bottom: 4px;
-    margin-left: auto;
-    font-weight: 300;
-    transition: all 0.3s ease;
-    margin-top: 40px;
-  }
-  a.discrete:hover {
-    border-bottom: solid 1px rgba(0, 0, 0, 0.2);
-  }
-  
-  button {
-    -webkit-appearance: none;
-    width: auto;
-    min-width: 100px;
-    border-radius: 24px;
-    text-align: center;
-    padding: 15px 40px;
-    margin-top: 5px;
-    background-color: #555357;
-    color: #fff;
-    font-size: 14px;
-    margin-left: auto;
-    font-weight: 500;
-    box-shadow: 0px 2px 6px -1px rgba(0, 0, 0, 0.13);
-    border: none;
-    transition: all 0.3s ease;
-    outline: 0;
-  }
-  button:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 2px 6px -1px rgba(182, 157, 230, 0.65);
-  }
-  button:hover:active {
-    transform: scale(0.99);
-  }
-  
-  input {
-    font-size: 16px;
-    padding: 20px 0px;
-    height: 56px;
-    border: none;
-    border-bottom: solid 1px rgba(0, 0, 0, 0.1);
-    background: #fff;
-    width: 280px;
+  *,
+  :after,
+  :before {
     box-sizing: border-box;
-    transition: all 0.3s linear;
-    color: #000;
-    font-weight: 400;
-    -webkit-appearance: none;
   }
-  input:focus {
-    border-bottom: solid 1px #b69de6;
-    outline: 0;
-    box-shadow: 0 2px 6px -8px rgba(182, 157, 230, 0.45);
+  .clearfix:after,
+  .clearfix:before {
+    content: "";
+    display: table;
+  }
+  .clearfix:after {
+    clear: both;
+    display: block;
+  }
+  a {
+    color: inherit;
+    text-decoration: none;
   }
   
-  .floating-label {
-    position: relative;
-    margin-bottom: 10px;
+  .login-wrap {
     width: 100%;
+    margin: auto;
+    max-width: 525px;
+    min-height: 670px;
+    position: relative;
+    background: url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg)
+      no-repeat center;
+    box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24),
+      0 17px 50px 0 rgba(0, 0, 0, 0.19);
   }
-  .floating-label label {
+  .login-html {
+    width: 100%;
+    height: 100%;
     position: absolute;
-    top: calc(50% - 7px);
-    left: 0;
-    opacity: 0;
-    transition: all 0.3s ease;
-    padding-left: 44px;
+    padding: 90px 70px 50px 70px;
+    background: rgba(40, 57, 101, 0.9);
   }
-  .floating-label input {
-    width: calc(100% - 44px);
-    margin-left: auto;
-    display: flex;
-  }
-  .floating-label .icon {
-    position: absolute;
+  .login-html .sign-in-htm,
+  .login-html .sign-up-htm {
     top: 0;
     left: 0;
-    height: 56px;
-    width: 44px;
-    display: flex;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    transform: rotateY(180deg);
+    backface-visibility: hidden;
+    transition: all 0.4s linear;
   }
-  .floating-label .icon svg {
-    height: 30px;
-    width: 30px;
-    margin: auto;
-    opacity: 0.15;
-    transition: all 0.3s ease;
+  .login-html .sign-in,
+  .login-html .sign-up,
+  .login-form .group .check {
+    display: none;
   }
-  .floating-label .icon svg path {
-    transition: all 0.3s ease;
+  .login-html .tab,
+  .login-form .group .label,
+  .login-form .group .button {
+    text-transform: uppercase;
   }
-  .floating-label input:not(:-moz-placeholder-shown) {
-    padding: 28px 0px 12px 0px;
+  .login-html .tab {
+    font-size: 22px;
+    margin-right: 15px;
+    padding-bottom: 5px;
+    margin: 0 15px 10px 0;
+    display: inline-block;
+    border-bottom: 2px solid transparent;
   }
-  .floating-label input:not(:-ms-input-placeholder) {
-    padding: 28px 0px 12px 0px;
+  .login-html .sign-in:checked + .tab,
+  .login-html .sign-up:checked + .tab {
+    color: #fff;
+    border-color: #1161ee;
   }
-  .floating-label input:not(:placeholder-shown) {
-    padding: 28px 0px 12px 0px;
-  }
-  .floating-label input:not(:-moz-placeholder-shown) + label {
-    transform: translateY(-10px);
-    opacity: 0.7;
-  }
-  .floating-label input:not(:-ms-input-placeholder) + label {
-    transform: translateY(-10px);
-    opacity: 0.7;
-  }
-  .floating-label input:not(:placeholder-shown) + label {
-    transform: translateY(-10px);
-    opacity: 0.7;
-  }
-  .floating-label input:valid:not(:-moz-placeholder-shown) + label + .icon svg {
-    opacity: 1;
-  }
-  .floating-label input:valid:not(:-ms-input-placeholder) + label + .icon svg {
-    opacity: 1;
-  }
-  .floating-label input:valid:not(:placeholder-shown) + label + .icon svg {
-    opacity: 1;
-  }
-  .floating-label input:valid:not(:-moz-placeholder-shown) + label + .icon svg path {
-    fill: #b69de6;
-  }
-  .floating-label input:valid:not(:-ms-input-placeholder) + label + .icon svg path {
-    fill: #b69de6;
-  }
-  .floating-label input:valid:not(:placeholder-shown) + label + .icon svg path {
-    fill: #b69de6;
-  }
-  .floating-label input:not(:valid):not(:focus) + label + .icon {
-    -webkit-animation-name: shake-shake;
-            animation-name: shake-shake;
-    -webkit-animation-duration: 0.3s;
-            animation-duration: 0.3s;
-  }
-  
-  @-webkit-keyframes shake-shake {
-    0% {
-      transform: translateX(-3px);
-    }
-    20% {
-      transform: translateX(3px);
-    }
-    40% {
-      transform: translateX(-3px);
-    }
-    60% {
-      transform: translateX(3px);
-    }
-    80% {
-      transform: translateX(-3px);
-    }
-    100% {
-      transform: translateX(0px);
-    }
-  }
-  
-  @keyframes shake-shake {
-    0% {
-      transform: translateX(-3px);
-    }
-    20% {
-      transform: translateX(3px);
-    }
-    40% {
-      transform: translateX(-3px);
-    }
-    60% {
-      transform: translateX(3px);
-    }
-    80% {
-      transform: translateX(-3px);
-    }
-    100% {
-      transform: translateX(0px);
-    }
-  }
-  .session {
-    display: flex;
-    flex-direction: row;
-    width: auto;
-    height: auto;
-    margin: auto auto;
-    background: #ffffff;
-    border-radius: 4px;
-    box-shadow: 0px 2px 6px -1px rgba(0, 0, 0, 0.12);
-  }
-  
-  .left {
-    width: 220px;
-    height: auto;
-    min-height: 100%;
+  .login-form {
+    min-height: 345px;
     position: relative;
-    background: url('fondo3.jpg');
-    background-size: cover;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
+    perspective: 1000px;
+    transform-style: preserve-3d;
   }
-
-
-
-
-  .left svg {
-    height: 40px;
-    width: auto;
-    margin: 20px;
+  .login-form .group {
+    margin-bottom: 15px;
   }
+  .login-form .group .label,
+  .login-form .group .input,
+  .login-form .group .button {
+    width: 100%;
+    color: #fff;
+    display: block;
+  }
+  .login-form .group .input,
+  .login-form .group .button {
+    border: none;
+    padding: 15px 20px;
+    border-radius: 25px;
+    background: rgba(255, 255, 255, 0.1);
+  }
+  .login-form .group input[data-type="password"] {
+    text-security: circle;
+    -webkit-text-security: circle;
+  }
+  .login-form .group .label {
+    color: #aaa;
+    font-size: 12px;
+  }
+  .login-form .group .button {
+    background: #1161ee;
+  }
+  .login-form .group label .icon {
+    width: 15px;
+    height: 15px;
+    border-radius: 2px;
+    position: relative;
+    display: inline-block;
+    background: rgba(255, 255, 255, 0.1);
+  }
+  .login-form .group label .icon:before,
+  .login-form .group label .icon:after {
+    content: "";
+    width: 10px;
+    height: 2px;
+    background: #fff;
+    position: absolute;
+    transition: all 0.2s ease-in-out 0s;
+  }
+  .login-form .group label .icon:before {
+    left: 3px;
+    width: 5px;
+    bottom: 6px;
+    transform: scale(0) rotate(0);
+  }
+  .login-form .group label .icon:after {
+    top: 6px;
+    right: 0;
+    transform: scale(0) rotate(0);
+  }
+  .login-form .group .check:checked + label {
+    color: #fff;
+  }
+  .login-form .group .check:checked + label .icon {
+    background: #1161ee;
+  }
+  .login-form .group .check:checked + label .icon:before {
+    transform: scale(1) rotate(45deg);
+  }
+  .login-form .group .check:checked + label .icon:after {
+    transform: scale(1) rotate(-45deg);
+  }
+  .login-html
+    .sign-in:checked
+    + .tab
+    + .sign-up
+    + .tab
+    + .login-form
+    .sign-in-htm {
+    transform: rotate(0);
+  }
+  .login-html .sign-up:checked + .tab + .login-form .sign-up-htm {
+    transform: rotate(0);
+  }
+  
+  .hr {
+    height: 2px;
+    margin: 60px 0 50px 0;
+    background: rgba(255, 255, 255, 0.2);
+  }
+  .foot-lnk {
+    text-align: center;
+  }
+  
