--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    color: #6a6f8c;
+    color: #10121f88;
     background: #c8c8c8;
     font: 600 16px/18px "Open Sans", sans-serif;
   }
@@ -29,7 +29,7 @@ body {
     max-width: 525px;
     min-height: 670px;
     position: relative;
-    background: url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg)
+    background: url('fondo3.jpg')
       no-repeat center;
     box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24),
       0 17px 50px 0 rgba(0, 0, 0, 0.19);
@@ -39,7 +39,7 @@ body {
     height: 100%;
     position: absolute;
     padding: 90px 70px 50px 70px;
-    background: rgba(40, 57, 101, 0.9);
+    background: rgba(118, 119, 122, 0.9);
   }
   .login-html .sign-in-htm,
   .login-html .sign-up-htm {
@@ -73,7 +73,7 @@ body {
   .login-html .sign-in:checked + .tab,
   .login-html .sign-up:checked + .tab {
     color: #fff;
-    border-color: #1161ee;
+    border-color: #020e20;
   }
   .login-form {
     min-height: 345px;
@@ -107,7 +107,7 @@ body {
     font-size: 12px;
   }
   .login-form .group .button {
-    background: #1161ee;
+    background: #030f25;
   }
   .login-form .group label .icon {
     width: 15px;
@@ -141,7 +141,7 @@ body {
     color: #fff;
   }
   .login-form .group .check:checked + label .icon {
-    background: #1161ee;
+    background: #2f353f;
   }
   .login-form .group .check:checked + label .icon:before {
     transform: scale(1) rotate(45deg);
@@ -165,9 +165,12 @@ body {
   .hr {
     height: 2px;
     margin: 60px 0 50px 0;
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(8, 1, 1, 0.2)
   }
   .foot-lnk {
     text-align: center;
   }
   
+  .input:focus {
+    border: solid 200px black;
+  }
