--- a/css/login.css
+++ b/css/login.css
@@ -174,3 +174,11 @@ body {
   .input:focus {
     border: solid 200px black;
   }
+
+  #dropdown{
+    border: none;
+    padding: 15px 20px;
+    border-radius: 25px;
+    background: rgba(255, 255, 255, 0.1);
+  }
+
